fix premature start

--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
         return filtered;
     }
 
-    var update = true;
+    var update = false;
     var refresher = false;
 
     startbutton.addEventListener('click', function(evt)
